# CRCpp

./: CMakeLists.txt  README.md  coding_decoding.cpp
inc/: binary_operations.hpp  code_correction.hpp  input_operations.hpp  matrix_operations.hpp  menu.hpp
src/: binary_operations.cpp  code_correction.cpp  input_operations.cpp  main.cpp  matrix_operations.cpp  menu.cpp
tests/: tests_main.cpp
